# thisctx

./: .cspell.json  .cz.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  README.tpl  TODO  flake.nix  justfile
compile_tests/: Cargo.toml
compile_tests/compatibility_tests/: keywords_visibility.rs
compile_tests/compile_tests/: attr_visibility.stderr
compile_tests/src/: main.rs
impl/: Cargo.toml  README.md
impl/src/: ast.rs  attr.rs  attrs.rs  context.rs  derive_with_context.rs  expand.rs  generics.rs  infer.rs  lib.rs  shared.rs  utils.rs
impl/src/expand/: context_field.rs  mod.rs
impl/src/utils/: mod.rs  punctuated.rs  surround.rs
impl_next/: Cargo.toml  README.md
impl_next/src/: attrs.rs  derive_with_context.rs  infer.rs  lib.rs  util.rs
src/: ext.rs  impl.rs  lib.rs  private.rs
tests/: attr.rs  attr_attr.rs  attr_context.rs  attr_from.rs  attr_generic.rs  attr_into.rs  attr_into_struct.rs  attr_magic.rs  attr_module.rs  attr_no_generic.rs  attr_no_unit.rs  attr_optional.rs  attr_rename.rs  attr_shortcut.rs  attr_skip.rs  attr_suffix.rs  attr_unit.rs  attr_vis.rs  attr_visibility.rs  basic.rs  compile_tests.rs  const_generics.rs  context.rs  derive_enum.rs  derive_struct.rs  enum_generics.rs  enum_into.rs  extra_traits.rs  from_context.rs  generics.rs  impl_next.rs  impl_trait.rs  magics.rs  no_std.rs  opt_attr.rs  opt_generic.rs  opt_into.rs  opt_module.rs  opt_shortcut.rs  opt_skip.rs  (+9 more)
tests/compile_fail/: attr_attr.rs  attr_attr.stderr  attr_optional.rs  attr_optional.stderr  attr_skip.rs  attr_skip.stderr  attr_vis.rs  attr_vis.stderr  attr_visibility.stderr  duplicated_attr.rs  duplicated_attr.stderr  opt_vis.rs  opt_vis.stderr
