[workspace]
members = ["impl"]

[package]
name = "thisctx"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["loichyan <loichyan@foxmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "Easily create error with contexts"
readme = "README.md"
repository = "https://github.com/loichyan/thisctx"
documentation = "https://docs.rs/thisctx"

keywords = ["error", "derive"]
categories = ["rust-patterns"]

[dependencies]
thisctx_impl = { version = "=0.4.0", path = "impl" }

[dev-dependencies]
thiserror = "1.0"
trybuild = "1.0"
