[workspace]
members = ["impl"]

[package]
name = "thisctx"
version = "0.4.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

description = "A handy macro to create error with contexts"
repository = "https://github.com/loichyan/thisctx"
keywords = ["error", "derive"]
categories = ["rust-patterns"]

[dependencies]
thisctx_impl = { version = "=0.4.0", path = "impl" }

[dev-dependencies]
rustversion = "1.0"
thiserror = "1.0"
trybuild = "1.0"
