[package]
name = "thisctx_impl"
version = "0.4.0"
license = "MIT OR Apache-2.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
edition = "2021"
rust-version = "1.56"

description = "Macro implementation of the `thisctx` crate"
readme = "README.md"
repository = "https://github.com/loichyan/thisctx"
documentation = "https://docs.rs/thisctx"

[lib]
proc-macro = true

[dependencies]
plap = { path = "../../plap", features = ["checking"] }
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"
