[package]
name = "thisctx_impl"
version = "0.4.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

description = "Macro implementation of thisctx"
repository = "https://github.com/loichyan/thisctx"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dependencies.plap]
git = "https://github.com/loichyan/plap.git"
rev = "172f385ed849b64c1ba674d3bcc6111714c2da62"
features = ["checking"]
