[package]
name = "thisctx_impl"
version = "0.4.0"
authors = ["Loi Chyan <loichyan@foxmail.com>"]
license = "MIT OR Apache-2.0"
edition = "2021"
rust-version = "1.56"

description = "Macro implementation of thisctx"
repository = "https://github.com/loichyan/thisctx"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = "2.0"

[dependencies.plap]
git = "https://github.com/loichyan/plap.git"
rev = "8172dc0b9629cf299c7290e1c7e6ec6bfebbc4ea"
features = ["checking"]
